# CatCaretaker

./: .gitignore  CMakeLists.txt  README.md  browsing.inipp  cat_checklist.inipp  releases.inipp  script.ccs
.github/ISSUE_TEMPLATE/: bug_report.md
carescript/: carescript-api.hpp  carescript-defaults.hpp  carescript-defs.hpp  carescript-macromagic.hpp  carescript-parsing.hpp  carescript-types.hpp  carescript.cpp  carescript.hpp
inc/: catcaretaker-ccs-extension.hpp  configs.hpp  network.hpp  options.hpp  pagelist.hpp
mods/: inipp.hpp  kittenlexer.hpp
mods/ArgParser/: ArgParser.cpp  ArgParser.h
mods/InI++/: Inipp.cpp  Inipp.hpp
src/: configs.cpp  main.cpp  network.cpp  options.cpp  pagelist.cpp
